<package>
  <name>ros_fview_fmf_saver</name>
  <version>0.0.1</version>
  <description>
     ros_fview_fmf_saver
  </description>
  <author>strawlab</author>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
